--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"version": "1.0.0",
+	"description": "A boilerplate for a Node.js project to help you get started with npm and package.json.",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
